# Cognitive_workbench

./: .gitignore  =6.0  ACTION_DISPLAY_GUIDE.md  CMakeLists.txt  DEBUG_CONFIGURATIONS.md  IDE_IMPORT_TROUBLESHOOTING.md  INPUT_DUPLICATION_FIX.md  LAUNCH_CONFIGURATIONS.md  LLM_STREAMING_ANALYSIS.md  README.md  SINGLE_LLM_ACTION_GUIDE.md  TEXT_INPUT_ROUTING.md  launch_nodes.py  launch_separate_terminals.sh  package.xml  setup_environment.sh  setup_ide_environment.py  test_memory_service.py  test_ros2_imports.py  test_service_simple.py  test_text_routing.py  test_textsensor_llm_action.py
cognitive_framework/: action_display_node.py  action_node_with_llm.py  llm_api.py  llm_client.py  llm_service_node.py  memory_node.py  sense_node.py  simple_llm_action_example.py  single_llm_action_example.py  test_service_server.py
launch/: action_node_with_llm.launch.py  cognitive_system_with_llm.launch.py  cognitive_system_with_llm_separate_terminals.launch.py  cognitive_system_with_llm_tmux.launch.py  memory_node.launch.py  sense_node.launch.py  simple_launch.py  single_llm_action_example.launch.py  single_llm_action_system.launch.py
scenarios/: joe.yaml  lost.yaml
src/: README.md  character_launcher.py  characters.yaml  executive_node.py  fastapi_action_display.py  format_prompt.py  launch_all_nodes.py  launcher.py  llm_service_node.py  map.py  map_node.py  memory_node.py  plan.py  requirements.txt  setup.sh  situation_node.py  test_action_entity_query.py  test_entity_model.py  test_map_agents.py  test_map_basic.py  test_visual_events.py
zenoh_cognitive_framework/: Messages.py  README.md  __init__.py  action_display_node.py  action_node.py  map.py  (+29 more)
(+7 files in other folders)
